--- a/src/app/pages/logged-in-layout/logged-in-layout.html
+++ b/src/app/pages/logged-in-layout/logged-in-layout.html
@@ -17,7 +17,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" routerLink="/dashboard/billing" routerLinkActive="active">
+            <a class="nav-link" routerLink="/dashboard/billing" routerLinkActive="active">
               <span data-feather="bar-chart-2"></span>
               Data Entry
             </a>
