Add reports app layout

--- a/src/app/pages/reports/reports.html
+++ b/src/app/pages/reports/reports.html
@@ -1,8 +1,10 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>Reports Placeholder</h2>
-      <p>This page is under construction. Reports will be available soon.</p>
+<app-logged-in-layout>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Reports Placeholder</h2>
+        <p>This page is under construction. Reports will be available soon.</p>
+      </div>
     </div>
   </div>
-</div>
+</app-logged-in-layout>
