--- a/src/app/pages/logged-in-layout/logged-in-layout.html
+++ b/src/app/pages/logged-in-layout/logged-in-layout.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!-- Sidebar -->
-    <nav class="col-md-2 d-none d-md-block sidebar">
+    <nav class="col-md-2 col-lg-1 d-none d-md-block sidebar">
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -39,7 +39,7 @@
     </nav>
 
     <!-- Main content -->
-    <main class="col-md-10 ms-sm-auto col-lg-10 px-md-4">
+    <main class="col-md-10 col-lg-11 ms-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Electric Dashboard</h1>
       </div>
