--- a/src/app/pages/logged-in-layout/logged-in-layout.html
+++ b/src/app/pages/logged-in-layout/logged-in-layout.html
@@ -29,7 +29,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" (click)="navigateToDashboard()">
+            <a class="nav-link" (click)="logout()" style="cursor: pointer;">
               <span data-feather="log-out"></span>
               Logout
             </a>
