--- a/src/app/pages/reports/reports.html
+++ b/src/app/pages/reports/reports.html
@@ -2,8 +2,26 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <h2>Reports Placeholder</h2>
-        <p>This page is under construction. Reports will be available soon.</p>
+        <h2>Energy Consumption Reports</h2>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <app-service-address-selector 
+        [selectedAddressId]="selectedAddressId"
+        (addressesLoaded)="onAddressesLoaded($event)" 
+        (addressSelected)="onAddressSelected($event)">
+      </app-service-address-selector>    
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Monthly Consumption by Year</h3>
+          </div>
+          <div class="card-body">
+            <app-monthly-consumption-graph [chartData]="monthlyData" [loading]="loading"></app-monthly-consumption-graph>
+          </div>
+        </div>
       </div>
     </div>
   </div>
