--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -29,6 +29,23 @@
           />
         </div>
         <div class="mb-3">
+          <label for="confirmPassword" class="form-label">Confirm Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="confirmPassword"
+            [(ngModel)]="confirmPassword"
+            name="confirmPassword"
+            required
+            minlength="8"
+          />
+          @if (password && confirmPassword && password !== confirmPassword) {
+            <div class="text-danger">
+              Passwords do not match
+            </div>
+          }
+        </div>
+        <div class="mb-3">
           <label for="firstName" class="form-label">First Name</label>
           <input
             type="text"
