--- a/src/app/components/service-address-entry/service-address-entry.html
+++ b/src/app/components/service-address-entry/service-address-entry.html
@@ -86,6 +86,17 @@
     >
   </div>
 
+  <div class="form-group">
+    <label for="country">Electric Company:</label>
+    <input
+      type="text"
+      id="electricCompanyId"
+      class="form-control"
+      [value]="form().electricCompanyId"
+      (input)="onInputChange('electricCompanyId', $event.target.value)"
+    >
+  </div>
+
   <div class="form-group checkbox-group">
     <label>
       <input
