--- a/src/app/components/service-address-entry/service-address-entry.html
+++ b/src/app/components/service-address-entry/service-address-entry.html
@@ -88,13 +88,18 @@
 
   <div class="form-group">
     <label for="country">Electric Company:</label>
-    <input
-      type="text"
+    <select
       id="electricCompanyId"
       class="form-control"
-      [value]="form().electricCompanyId"
-      (input)="onInputChange('electricCompanyId', $event.target.value)"
+      (change)="onSelectChange($event, 'electricCompanyId')"
     >
+      <option value="">Select Electric Company</option>
+      @for (company of electricCompanies(); track company.electricCompanyId) {
+        <option [value]="company.electricCompanyId" [selected]="form().electricCompanyId === company.electricCompanyId">
+          {{ company.companyName }}
+        </option>
+      }
+    </select>
   </div>
 
   <div class="form-group checkbox-group">
