Implement a forecast algorithm.

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -6,23 +6,30 @@
         <div class="card-body">
           <div class="row">
             <div class="col-sm-4">
-              <select class="form-select" [value]="selectedYearFilter()" (change)="onYearSelected($event)">
-               @for (option of yearOptions; track trackByYear($index, option)) {
-                 <option [value]="option.value">{{ option.label }}</option>
-               }
-              </select>
+              <div class="row">
+                <select class="form-select" [value]="selectedYearFilter()" (change)="onYearSelected($event)">
+                @for (option of yearOptions; track trackByYear($index, option)) {
+                  <option [value]="option.value">{{ option.label }}</option>
+                }
+                </select>               
+              </div>
+              <div class="row" id="filteringOptions">
+                <label class="form-check-label">
+                  <input type="radio" class="form-check-input" name="chartView" [checked]="selectedChartView()=='yearly'" (change)="setChartView('yearly')" />
+                  Yearly
+                </label>
+                <label class="form-check-label">
+                  <input type="radio" class="form-check-input" name="chartView" [checked]="selectedChartView()=='ytd'" (change)="setChartView('ytd')" />
+                  Year-to-Date
+                </label>                
+              </div>
             </div>
-          <div class="col-sm-4">
-            <label class="form-check-label">
-              <input type="radio" class="form-check-input" name="chartView" [checked]="selectedChartView()=='yearly'" (change)="setChartView('yearly')" />
-              Yearly
-            </label>
-            <label class="form-check-label">
-              <input type="radio" class="form-check-input" name="chartView" [checked]="selectedChartView()=='ytd'" (change)="setChartView('ytd')" />
-              Year-to-Date
-            </label>
-          </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" id="forecast">
+              <div class="col-sm-3">
+                <app-forecast-display [forecast]="forecast"></app-forecast-display>
+              </div>
+            </div>
+            <div class="col-sm-4" id="serviceAddressSelection">
               <app-service-address-selector (addressesLoaded)="onAddressesLoaded($event)" (addressSelected)="onAddressSelected($event)"></app-service-address-selector>
             </div>
           </div>
