--- a/src/app/components/forecast-display/forecast-display.html
+++ b/src/app/components/forecast-display/forecast-display.html
@@ -1,17 +1,20 @@
 @if(forecast) {
-  <div class="row">
-    <div class="col-sm-12">
-      <h6>Forecast for period starting {{ forecast.forecastYear }}-{{ forecast.forecastMonth | number:'2.0' }}</h6>
-      <p>Predicted Amount: {{ forecast.predictedAmount | currency }}</p>
-      <p>Confidence: {{ forecast.confidence * 100 | number:'1.0-2' }}%</p>
+  <div class="forecast-card">
+    <div class="row">
+      <div class="col-12">
+        <h6 class="forecast-title">Forecast for period starting {{ forecast.forecastYear }}-{{ forecast.forecastMonth | number:'2.0' }}</h6>
+        <p class="forecast-amount">Predicted Amount: {{ forecast.predictedAmount | currency }}</p>
+        <p class="forecast-confidence">Confidence: {{ forecast.confidence * 100 | number:'1.0-2' }}%</p>
+      </div>
     </div>
   </div>
 }
-@else
-{
-  <div class="row">
-    <div class="col-sm-12">
-      <h5>No forecast data available.</h5>
+@else {
+  <div class="forecast-card">
+    <div class="row">
+      <div class="col-12">
+        <h5>No forecast data available.</h5>
+      </div>
     </div>
   </div>
 }
